[package]

name = "amqp"
version = "0.0.15"
authors = ["Andrii Dmytrenko <andrey@reevoo.com>"]
description = "AMQP/RabbitMQ protocol client"
repository = "https://github.com/Antti/rust-amqp"
license = "MIT/Apache-2.0"
keywords = ["amqp", "rabbitmq", "queue"]
readme = "Readme.md"
# build = "build.rs"

[lib]

name = "amqp"

[features]
tls = ["openssl"]
default = ["tls"]

[dependencies]
bit-vec = "0.4"
byteorder = "0.3"
enum_primitive = "0.1"
env_logger = "0.3"
log = "0.3"
url = "0.2"
clippy = {version = "0.0.41", optional = true}

[dependencies.openssl]
version = "0.6"
optional = true
features = ["tlsv1_1", "tlsv1_2"]
