[package]

name = "amqp"
version = "0.0.20"
authors = ["Andrii Dmytrenko <andrey@reevoo.com>"]
description = "AMQP/RabbitMQ protocol client"
repository = "https://github.com/Antti/rust-amqp"
license = "MIT/Apache-2.0"
keywords = ["amqp", "rabbitmq", "queue"]
readme = "Readme.md"
# build = "build.rs"

[lib]
name = "amqp"

[dependencies]
bit-vec = "0.4"
byteorder = "0.5"
enum_primitive = "0.1"
env_logger = "0.3"
log = "0.3"
url = "1.2"
futures = { git = "https://github.com/alexcrichton/futures-rs" }
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
bytes = { git = "https://github.com/carllerche/bytes" }

[dev-dependencies]
# clippy  = "*"
