[package]

name = "amqp"
version = "0.1.1"
authors = ["Andrii Dmytrenko <refresh.xss@gmail.com>"]
description = "AMQP/RabbitMQ protocol client"
repository = "https://github.com/Antti/rust-amqp"
license = "MIT/Apache-2.0"
keywords = ["amqp", "rabbitmq", "queue"]
readme = "Readme.md"
# build = "build.rs"

[lib]

name = "amqp"

[features]
tls = ["openssl"]
default = ["tls"]

[dependencies]
env_logger = "0.3"
log = "0.3"
url = "1.2"
amq-proto = "0.1.0"

[dependencies.openssl]
version = "0.9"
optional = true

[dev-dependencies]
# clippy  = "*"
